# Euramax

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  COURSE_DOCS.md  CYBERSECURITY_COURSE.md  DOCS.md  IMPLEMENTATION_COMPLETE.md  README.md  demo_dashboard.html  docker-compose.yml  package.json  pyproject.toml  requirements.txt  requirements_minimal.txt  test_project.py  test_server.py
.github/workflows/: deploy-pages.yml  jekyll-gh-hpages.yml  jekyll-gh-pages.yml
backend/: Dockerfile
backend/app/: __init__.py  main.py
backend/app/api/: dashboard.py  notifications.py  threats.py
backend/app/core/: __init__.py  ai_bot.py  notification_service.py  threat_detector.py
backend/app/database/: __init__.py  database.py  models.py
backend/app/localization/: en.json  nl.json
backend/tests/: test_ai_bot.py  test_threat_detector.py
docs/api/: README.md
docs/user-guide/: README.md
euramax/: __init__.py  main.py
euramax/ai/: threat_detector.py
euramax/api/routes/: course.py  dashboard.py  notifications.py  security.py
euramax/core/: config.py
euramax/course/: __init__.py  content.py  models.py  quiz_service.py  routes.py  service.py
euramax/notifications/: push_service.py
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx
frontend/src/localization/: en.json  nl.json
locales/nl/: messages.json
static/: about.html  contact.html  course.html  course_backup.html  cybersecurity-course.html  cybersecurity-course.js  dashboard.html  dashboard_backup.html  dashboard_new.html  docs.html  education.html  index.html  login.html  phishing-simulation-demo.html  phishing-simulation-demo_backup.html  services.html  support.html  team.html
static/css/: dashboard.css  docs.css  main.css  support.css  team.css
static/includes/: navigation.html
static/js/: dashboard.js  docs.js  main.js  support.js  team.js
tests/: test_course_system.py  test_euramax_core.py
(+5 files in other folders)
